--- a/test-output/old/Default Suite/methods.html
+++ b/test-output/old/Default Suite/methods.html
@@ -1,22 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7090a6">  <td>20/07/06 16:59:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProvider_OrangeHRMTest.setup()[pri:0, instance:com.testng.practice.DataProvider_OrangeHRMTest@74a10858]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1873859565</td>   <td></td> </tr>
-<tr bgcolor="7090a6">  <td>20/07/06 16:59:52</td>   <td>13857</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider_OrangeHRMTest.login(java.lang.String, java.lang.String)[pri:0, instance:com.testng.practice.DataProvider_OrangeHRMTest@74a10858]">login</td> 
-  <td>main@1873859565</td>   <td></td> </tr>
-<tr bgcolor="7090a6">  <td>20/07/06 17:00:04</td>   <td>25628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProvider_OrangeHRMTest.closeBrowser()[pri:0, instance:com.testng.practice.DataProvider_OrangeHRMTest@74a10858]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1873859565</td>   <td></td> </tr>
-<tr bgcolor="7090a6">  <td>20/07/06 17:00:04</td>   <td>25843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProvider_OrangeHRMTest.setup()[pri:0, instance:com.testng.practice.DataProvider_OrangeHRMTest@74a10858]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1873859565</td>   <td></td> </tr>
-<tr bgcolor="7090a6">  <td>20/07/06 17:00:16</td>   <td>37658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider_OrangeHRMTest.login(java.lang.String, java.lang.String)[pri:0, instance:com.testng.practice.DataProvider_OrangeHRMTest@74a10858]">login</td> 
-  <td>main@1873859565</td>   <td></td> </tr>
-<tr bgcolor="7090a6">  <td>20/07/06 17:00:28</td>   <td>49084</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProvider_OrangeHRMTest.closeBrowser()[pri:0, instance:com.testng.practice.DataProvider_OrangeHRMTest@74a10858]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1873859565</td>   <td></td> </tr>
-<tr bgcolor="7090a6">  <td>20/07/06 17:00:28</td>   <td>49226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProvider_OrangeHRMTest.setup()[pri:0, instance:com.testng.practice.DataProvider_OrangeHRMTest@74a10858]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1873859565</td>   <td></td> </tr>
-<tr bgcolor="7090a6">  <td>20/07/06 17:00:40</td>   <td>61244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider_OrangeHRMTest.login(java.lang.String, java.lang.String)[pri:0, instance:com.testng.practice.DataProvider_OrangeHRMTest@74a10858]">login</td> 
-  <td>main@1873859565</td>   <td></td> </tr>
-<tr bgcolor="7090a6">  <td>20/07/06 17:00:47</td>   <td>68403</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProvider_OrangeHRMTest.closeBrowser()[pri:0, instance:com.testng.practice.DataProvider_OrangeHRMTest@74a10858]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1873859565</td>   <td></td> </tr>
+<tr bgcolor="888abb">  <td>20/07/07 18:12:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SoftAssertionEx_OrangeHRM.setup()[pri:0, instance:com.testng.assertions.SoftAssertionEx_OrangeHRM@289d1c02]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1412925683</td>   <td></td> </tr>
+<tr bgcolor="888abb">  <td>20/07/07 18:12:28</td>   <td>7838</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertionEx_OrangeHRM.openURL()[pri:0, instance:com.testng.assertions.SoftAssertionEx_OrangeHRM@289d1c02]">openURL</td> 
+  <td>main@1412925683</td>   <td></td> </tr>
+<tr bgcolor="888abb">  <td>20/07/07 18:12:32</td>   <td>11729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertionEx_OrangeHRM.login()[pri:0, instance:com.testng.assertions.SoftAssertionEx_OrangeHRM@289d1c02]">login</td> 
+  <td>main@1412925683</td>   <td></td> </tr>
+<tr bgcolor="888abb">  <td>20/07/07 18:12:41</td>   <td>20956</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertionEx_OrangeHRM.verifyCurrentURL()[pri:0, instance:com.testng.assertions.SoftAssertionEx_OrangeHRM@289d1c02]">verifyCurrentURL</td> 
+  <td>main@1412925683</td>   <td></td> </tr>
+<tr bgcolor="888abb">  <td>20/07/07 18:12:41</td>   <td>20962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertionEx_OrangeHRM.verifyTitle()[pri:0, instance:com.testng.assertions.SoftAssertionEx_OrangeHRM@289d1c02]">verifyTitle</td> 
+  <td>main@1412925683</td>   <td></td> </tr>
+<tr bgcolor="888abb">  <td>20/07/07 18:12:41</td>   <td>20969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertionEx_OrangeHRM.logout()[pri:0, instance:com.testng.assertions.SoftAssertionEx_OrangeHRM@289d1c02]">logout</td> 
+  <td>main@1412925683</td>   <td></td> </tr>
+<tr bgcolor="888abb">  <td>20/07/07 18:12:46</td>   <td>26038</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SoftAssertionEx_OrangeHRM.closeBrowser()[pri:0, instance:com.testng.assertions.SoftAssertionEx_OrangeHRM@289d1c02]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1412925683</td>   <td></td> </tr>
 </table>
